# docker_learn

./: Dockerfile  file.txt  pyproject.toml
.github/workflows/: dispatch.yaml  on_pr  on_push.yaml  python-app.yml
